# KpFn

./: README.md  Session.vim  run.sh
HowToTest/: howTOtEst.txt  howto.txt
Killfw/: readAllDirs.c
killPart/: kill.c
main/: main.c
project_files/: CMakeLists.txt  Session.vim  build.sh
project_files/src/: Session.vim
project_files/src/killPart/: Session.vim  kill.c  kill.h
project_files/src/main/: main.c
project_files/src/readDirs/: readAllDirs.c  readAllDirs.h
test/: Session.vim  minunit_example.c
